github-actions-tutorial/actions-eval-2/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-2-ingress
  namespace: nginx-demo-2
spec:
  rules:
  - host: "second-nginx.kube-demo-1.home.clcreative.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-demo-2-service
            port:
              number: 80
